<resources>
    <string name="app_name">MoodDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_friend_event">Friends Mood Event</string>
    <string name="menu_my_map">My Map</string>
    <string name="menu_friend_map">Friends Map</string>
    <string name="menu_share">Friends</string>
    <string name="menu_send">Follow New Friends</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_swich_mode">Switch Mode</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="socialSituation">socialSituation</string>
    <string name="location">location</string>
    <string name="reason">reason</string>
    <string name="photo">photo</string>

    <string-array name="moodList">
        <item>happy</item>
        <item>angry</item>
        <item>sad</item>
        <item>content</item>
        <item>stressed</item>
        <item>meh</item>
    </string-array>

    <string-array name="SocialSituation">
        <item>secret</item>
        <item>alone</item>
        <item>with one other person</item>
        <item>with two to several people</item>
        <item>with a crowd</item>
    </string-array>

    <string name="moodIcons">choose a mood</string>

    <!--Welcome&Login&Sign up activity-->
    <string name="login_String">Welcome Back!</string>
    <string name="signup_String">Hi there :)</string>
    <string name="noAccount">"Don't have an account?"</string>
    <string name="hasAccount">Already have an account?</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="newUser">enter your username</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_String1">Hi! Welcome to Mood Diary</string>
    <string name="welcome_String2">"Let's fill in all your feelings"</string>
    <string name="new_password">enter your password</string>
    <string name="new_password_again">enter your password again</string>

    <!--Add activity-->
    <string name="add_String">How do you feel today?</string>
    <string name="myMood">My mood is</string>
    <string name="chooseDate">Choose the date</string>
    <string name="chooseTime">Choose the time</string>
    <string name="chooseScocial">With whom?</string>
    <string name="chooseLocation">Enter the location</string>
    <string name="uploadPhoto">Upload a photo</string>
    <string name="addDiary">Finish your diary</string>


    <!--ViewActivity-->
    <string name="view_edit_button">Edit</string>
    <string name="title_activity_maps">Map</string>

    <!--SendFragment-->
    <string name="send_username_title">Enter the username of your friend</string>
    <string name="send_button">Send following request</string>

    <!--ShareFragment-->
    <string name="share_agree_button_text">agree</string>
    <string name="share_decline_button_text">decline</string>
    <string name="request_list_name">New Request</string>
    <string name="follow_list_name">All Following</string>
    <string name="follower_list_name">All Followers</string>
    <string name="cancel_follow">Unfollow</string>
    <string name="delete_follower">Delete Follower</string>
    <string name="follow_back">Follow Back</string>
    <string name="already_followed">already followed</string>


    <string name="guide_format">Page %1$d</string>
  
    <string name="index">Homepage</string>
    <string name="skip">Skip</string>
    <string name="finish">Start</string>

    <!-- filter -->
    <string name="clear_all_button">clear all</string>
    <string name="select_all_button">select all</string>

    <!-- API -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBe-HnY17X1_GOMDFYDJNZHHpEmWOfiATw</string>
</resources>
