<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_my_event"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friend_event"
            android:icon="@drawable/ic_menu_friends_event"
            android:title="@string/menu_friend_event" />
        <item
            android:id="@+id/nav_my_map"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_my_map" />
        <item
            android:id="@+id/nav_friend_map"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_friend_map" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_add_friends"
            android:title="@string/menu_send" />
    </group>
</menu>
