<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mooddiary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_friend_event"
        android:name="com.example.mooddiary.ui.friendevent.FriendEventFragment"
        android:label="@string/menu_friend_event"
        tools:layout="@layout/fragment_friend_event" />

    <fragment
        android:id="@+id/nav_my_map"
        android:name="com.example.mooddiary.ui.mymap.MyMapFragment"
        android:label="@string/menu_my_map"
        tools:layout="@layout/fragment_my_map" />

    <fragment
        android:id="@+id/nav_friend_map"
        android:name="com.example.mooddiary.ui.friendmap.FriendMapFragment"
        android:label="@string/menu_friend_map"
        tools:layout="@layout/fragment_friend_map" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.mooddiary.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.mooddiary.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>