<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="76dp"
        android:paddingLeft="36dp"
        android:text="@string/signup_String"
        android:textColor="@color/colorPink"
        android:textSize="30sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="66dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/newUser"
            android:textSize="20sp"
            android:textColor="@color/colorGray">
        </TextView>

        <EditText
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="26dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            android:textColor="#4d4d4d"
            android:text="MoodDiary"
            android:theme="@style/EditTextStyle">
        </EditText>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@color/colorPink"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="46dp"
            android:text="@string/hasAccount"
            android:textColor="@color/colorDarkGray">
        </TextView>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/colorPink"
            android:textAllCaps="false"
            android:background="@android:color/transparent">

        </Button>


    </LinearLayout>

</LinearLayout>


