<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/request_list_name"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/colorLightPink"/>

        <ListView
            android:id="@+id/share_new_request_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/follow_list_name"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/colorLightPink"/>

        <ListView
            android:id="@+id/share_follow_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false" >
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/follower_list_name"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/colorLightPink"/>

        <ListView
            android:id="@+id/share_follower_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false" >
        </ListView>

    </LinearLayout>

</ScrollView>