<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <EditText
        android:id="@+id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reason"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="255dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="90dp" />

    <Spinner
        android:id="@+id/mood"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:entries="@array/moodList"
        android:spinnerMode="dropdown"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="143dp" />

    <Spinner
        android:id="@+id/social"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:entries="@array/socialSituation"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="45dp" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="158dp"
        android:layout_height="154dp"
        app:srcCompat="@drawable/ic_menu_friends_event"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="327dp" />

    <ImageView
        android:id="@+id/moodicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_menu_camera"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="152dp" />

    <Switch
        android:id="@+id/Edit"
        android:layout_width="99dp"
        android:layout_height="27dp"
        android:text="Edit"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="300dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="562dp" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="483dp" />

    <Button
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="481dp" />

</androidx.constraintlayout.widget.ConstraintLayout>